src/objects/Recurring_Donation__c.object
<CustomObject>
    <description>used to track recurring donations</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>R00N700000022mdEEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>R00N700000022mdSEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <description>Recurring Donation Amount</description>
        <label>Donation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NFG_Master_Recurring_Donation_ID__c</fullName>
        <description>The &quot;master&quot; recurring donation to which subsequent donations are attached.</description>
        <label>NFG Master Recurring Donation ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>R00N700000022mdAEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <label>Program Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_No__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Recurring Donation #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Status__c</fullName>
        <label>Recurring Donation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recurring Donation</label>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>